Fixed sidenav scrollbar issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,7 @@
     left: 0;
     background-color: #111;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .technical-skills {
@@ -42,5 +42,4 @@
 
 .row-size {
     height: 310px;
-
 }
